Archive2/43/211c7998c77efa/output
main.cpp: In function 'int main()':
main.cpp:22:39: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<char> >::value_type* {aka char*}' to 'unsigned char*' [-fpermissive]
         unsigned char *begin = &data[0];
                                       ^
main.cpp:23:38: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<char> >::value_type* {aka char*}' to 'unsigned char*' [-fpermissive]
         unsigned char *end = &data[0]+num_elements;
                                      ^
main.cpp:24:37: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<char> >::value_type* {aka char*}' to 'unsigned char*' [-fpermissive]
         unsigned char *dst = &dest[0];
                                     ^
main.cpp:27:14: error: 'packed' was not declared in this scope
             *packed++ = (c<<4) | (*begin++);
              ^
main.cpp:21:18: warning: unused variable 'lim' [-Wunused-variable]
         unsigned lim = dest.size();
                  ^
main.cpp:24:24: warning: unused variable 'dst' [-Wunused-variable]
         unsigned char *dst = &dest[0];
                        ^
